[tool.poetry]
name = "md-docs-generator"
version = "0.1.0"
description = ""
authors = ["James Mitchell-White <jamesjimitchell@gmail.com>"]
readme = "README.md"
packages = [
  {include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
md-docs-generator = "md_docs_generator:main"
